--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ url: "http://danielfeloiola.github.io" # the base hostname & protocol for your s
 
 # User settings
 username: Hello! I'm Daniel
-user_description: I'm a Digital Media Researcher, and here are some of my projets. Feel free to take a look around
-email: anon@anon.com
+user_description: I am a Digital Media and Communication researcher, working especially with data analysis and visualization to get insights from online platforms and social media. Here are some of my projects. Feel free to take a look around.
+email: danielfx19@gmail.com
 twitter_username: daniel-loiola
 github_username:  danielfeloiola
 #gplus_username:  lorem_ipsum
